--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -6,7 +6,7 @@ layout: default
 
   {% if page.display_title %}
   <header class="page--header">
-    <h1 class="page--title">{{ page.title }}</h1>
+    <h1 class="page--title text-center">{{ page.title }}</h1>
   </header>
   {% endif %}
 
@@ -46,7 +46,7 @@ layout: default
 
           <div class="gallery--box">
 
-            <a href="{% include imgpath.html src=image %}" class="gallery--link" data-lightbox="gallery" data-title="{{ thisimage.image_title }}{% if thisimage.image_description %} - {{ thisimage.image_description }}{% endif %}">
+            <a href="{% include imgpath.html src=image %}" class="gallery--link" data-lightbox="gallery" data-title="{{ thisimage.image_title }}{% if thisimage.image_description_markdown %} - {{ thisimage.image_description_markdown | markdownify }}{% endif %}">
 
               {% if page.thumb_crop %}
 
