--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -70,8 +70,12 @@ hr {
   margin: $base-spacing 0;
 }
 
-.textright {
+.textright,
+.text-right {
     text-align: right;
+}
+.text-center {
+  text-align: center;
 }
 blockquote {
   padding: 1em 0;
