--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,14 +4,14 @@ layout: default
 <div class="page">
 
 
-	{% if page.main_image_path %}
-		<figure>
-		{% assign alt_text = page.title %}
-		{% if page.image_caption %} {% assign alt_text = page.image_caption %} {% endif %}
-		{% include img.html src=page.main_image_path alt=alt_text %}
-		<figcaption>{{ alt_text }}</figcaption>
-		</figure>
-	{% endif %}
+  {% if page.main_image_path %}
+    <figure class="text-center">
+    {% assign alt_text = page.title %}
+    {% if page.main_image_caption %} {% assign alt_text = page.main_image_caption %} {% endif %}
+    {% include img.html src=page.main_image_path alt=alt_text %}
+    {% if page.main_image_caption %}<figcaption>{{ alt_text }}</figcaption>{% endif %}
+    </figure>
+  {% endif %}
 
   <article class="post--content">
     {{ content }}
