--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -26,7 +26,7 @@
 
     font-family: $logo-font-family;
     color: $dark-gray;
-    text-transform: uppercase;
+    //text-transform: uppercase;
     text-decoration: none;
     margin-top: 0;
     margin-bottom: 1rem;
