--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -14,6 +14,7 @@ h6 {
   font-size: modular-scale(1);
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
+  font-weight: normal;
 }
 h1 {
   font-size: modular-scale(2);
