--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -21,7 +21,7 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 /// Colors
-$black: rgb(17, 17, 17);
+$black: #696767;
 
 $white: rgb(255, 255, 255);
 $kbgray: rgb(229, 229, 229);
