--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -25,7 +25,7 @@
     align-self: center; // flex centered
 
     font-family: $logo-font-family;
-    color: $dark-gray;
+    color: $base-font-color;
     //text-transform: uppercase;
     text-decoration: none;
     margin-top: 0;
